--- a/package.json
+++ b/package.json
@@ -1,16 +1,15 @@
 {
-  "name": "selenium-mocha",
-  "version": "1.0.0",
-  "description": "Selenium Mocha",
-  "main": "index.js",
-  "scripts": {
-    "test": "mocha tests/*.spec.js"
-  },
-  "dependencies": {
-    "chromedriver": "^115.0.1",
-    "edgedriver": "^5.3.2",
-    "geckodriver": "^4.1.3",
-    "mocha": "^10.2.0",
-    "selenium-webdriver": "^4.11.1"
-  }
+	"name": "selenium-mocha",
+	"version": "1.0.0",
+	"description": "Selenium Mocha",
+	"main": "index.js",
+	"scripts": {
+		"test": "mocha tests/*.spec.js",
+		"test:chrome": "mocha tests1/configuration.spec.js"
+	},
+	"dependencies": {
+		"mocha": "^10.2.0",
+		"mochapack": "^2.1.4",
+		"selenium-webdriver": "^4.11.1"
+	}
 }
