--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "chromedriver": "^115.0.1",
+    "csv": "^6.3.1",
     "edgedriver": "^5.3.2",
     "geckodriver": "^4.1.3",
     "mocha": "^10.2.0",
