--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
 	"main": "index.js",
 	"scripts": {
 		"test": "mocha tests/*.spec.js",
-		"test:chrome": "mocha tests1/configuration.spec.js"
+		"test:configuration": "mocha tests1/configuration.spec.js",
+		"test:performance": "mocha performance_at/performance.configure.kpi.spec.js",
+		"test:review": "mocha admin_review_at/admin.review.spec.js"
 	},
 	"dependencies": {
 		"mocha": "^10.2.0",
