add script automation into tests folder

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
 		"test": "mocha tests/*.spec.js",
 		"test:configuration": "mocha tests1/configuration.spec.js",
 		"test:performance": "mocha performance_at/performance.configure.kpi.spec.js",
-		"test:review": "mocha admin_review_at/admin.review.spec.js"
+		"test:review": "mocha admin_review_at/admin.review.spec.js",
+		"test:nhan": "mocha tests/performance.configure.kpi.spec.js tests/admin.review.spec.js tests/configuration.spec.js"
 	},
 	"dependencies": {
 		"mocha": "^10.2.0",
