--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "test": "mocha tests/*.spec.js"
   },
   "dependencies": {
+    "chromedriver": "^115.0.1",
+    "csv": "^6.3.1",
+    "edgedriver": "^5.3.2",
+    "geckodriver": "^4.1.3",
     "mocha": "^10.2.0",
     "selenium-webdriver": "^4.11.1"
   }
